--- a/css/header.css
+++ b/css/header.css
@@ -1,2 +1,37 @@
 /* Set a style for all elements inside the header i.e. Sign Up button, Sign In button, 
 the title "ScriBBler" & the sub-heading below "ScriBBLer" */
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+@font-face {
+  font-family: Satisfy;
+  src: url(Satisfy-Regular.ttf);
+}
+#website-logo{
+  font-family: Satisfy;
+  margin-left: 7px;  
+}
+h1{
+  color: rgb(29, 29, 170);
+  font-size: 47px;
+  font-weight: 100;
+  margin: 0;
+}
+p{
+  margin-top: 0;
+}
+#header-btns{
+  display: flex;
+  height: 15%;
+  width: 13%;
+  margin: 1%;  
+  justify-content: space-between;
+}
+.login-btn{
+  background-color: blue;
+  color: white;
+  padding: 4% 10%;
+  border: none;
+  font-weight: 500;
+}
