--- a/css/header.css
+++ b/css/header.css
@@ -24,9 +24,9 @@ p{
 #header-btns{
   display: flex;
   height: 15%;
-  width: 13%;
+  width: 20%;
   margin: 1%;  
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .login-btn{
   background-color: blue;
@@ -34,4 +34,5 @@ p{
   padding: 4% 10%;
   border: none;
   font-weight: 500;
+  margin-left: 5%;
 }
